# colcon-ros-cargo

./: .gitignore  README.md  setup.cfg  setup.py  stdeb.cfg
.github/actions/local_pytest/: action.yml  strategy.json
.github/workflows/: ci.yaml  ci.yml  pytest.yaml  release.yml
colcon_ros_cargo/package_identification/: ament_cargo.py
colcon_ros_cargo/task/ament_cargo/: build.py  test.py
test/: test_build.py  test_flake8.py
test/rust-sample-package/: Cargo.toml  package.xml
