[metadata]
name = colcon-ros-cargo
version = attr: colcon_ros_cargo.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-ros-cargo/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-ros-cargo/
author = Nikolai Morin
author_email = nnmmgit@gmail.com
maintainer = Nikolai Morin
maintainer_email = nnmmgit@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support Ament Cargo packages.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
  # to set an environment variable when a package installs a library
  colcon-library-path
  colcon-ros
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_core.package_identification =
    ament_cargo = colcon_ros_cargo.package_identification.ament_cargo:AmentCargoPackageIdentification
colcon_core.task.build =
    ament_cargo = colcon_ros_cargo.task.ament_cargo.build:AmentCargoBuildTask

[flake8]
import-order-style = google
