[metadata]
name = colcon-ros-cargo
version = attr: colcon_ros_cargo.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-ros-cargo/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-ros-cargo/
author = Nikolai Morin
author_email = nnmmgit@gmail.com
maintainer = Nikolai Morin
maintainer_email = nnmmgit@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support Ament Cargo packages.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = colcon

[options]
install_requires =
  cargo-ament-build
  colcon-core
  # to set an environment variable when a package installs a library
  colcon-library-path
  colcon-cargo
  colcon-ros
  toml
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:pkg_resources is deprecated as an API::flake8_import_order
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
    ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning
    ignore:the imp module is deprecated in favour of importlib.*:PendingDeprecationWarning
junit_suite_name = colcon-ros-cargo
markers =
    flake8
    linter

[options.entry_points]
colcon_core.package_identification =
    ament_cargo = colcon_ros_cargo.package_identification.ament_cargo:AmentCargoPackageIdentification
colcon_core.task.build =
    ament_cargo = colcon_ros_cargo.task.ament_cargo.build:AmentCargoBuildTask
colcon_core.task.test =
    ament_cargo = colcon_ros_cargo.task.ament_cargo.test:AmentCargoTestTask

[flake8]
import-order-style = google
